{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 37,
  "lineage": "1bb02ff8-cf0f-f283-6ade-bbbc474cbc4c",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "lz_test_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260114",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/zones/asia-south1-a/disks/lz-test-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eighth-effect-484111-f5/zones/asia-south1-a/instances/lz-test-vm",
            "instance_id": "1983437937843175857",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "6DPoiSbVCo0=",
            "metadata_startup_script": "#!/bin/bash\r\necho \"landing zone ready\" | logger -t lz-test-vm-startup\r\n",
            "name": "lz-test-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/networks/lz-hub-vpc",
                "network_ip": "10.10.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/regions/asia-south1/subnetworks/lz-private-subnet-a",
                "subnetwork_project": "eighth-effect-484111-f5"
              }
            ],
            "project": "eighth-effect-484111-f5",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/zones/asia-south1-a/instances/lz-test-vm",
            "service_account": [
              {
                "email": "lz-runtime-sa@eighth-effect-484111-f5.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.data.google_compute_image.debian",
            "module.iam.google_compute_project_metadata.os_login",
            "module.iam.google_project_iam_member.lz_admin_compute_admin",
            "module.iam.google_project_iam_member.lz_admin_project_iam_admin",
            "module.iam.google_project_iam_member.lz_admin_service_account_user",
            "module.iam.google_project_iam_member.lz_monitoring_logging_admin",
            "module.iam.google_project_iam_member.lz_monitoring_monitoring_admin",
            "module.iam.google_service_account.lz_admin_sa",
            "module.iam.google_service_account.lz_monitoring_sa",
            "module.iam.google_service_account.lz_runtime_sa",
            "module.logging_monitoring.google_monitoring_alert_policy.vm_high_cpu",
            "module.logging_monitoring.google_monitoring_dashboard.lz_dashboard",
            "module.logging_monitoring.google_monitoring_notification_channel.lz_email_channel",
            "module.logging_monitoring.google_project_service.required_apis",
            "module.logging_monitoring.google_storage_bucket.lz_logs_bucket",
            "module.networking.google_compute_firewall.allow_all_egress",
            "module.networking.google_compute_firewall.allow_ssh_internal",
            "module.networking.google_compute_firewall.deny_all_ingress",
            "module.networking.google_compute_network.lz_hub_vpc",
            "module.networking.google_compute_router.lz_router",
            "module.networking.google_compute_router_nat.lz_nat",
            "module.networking.google_compute_subnetwork.lz_private_subnet_a",
            "module.networking.google_compute_subnetwork.lz_private_subnet_b"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-01-18T08:13:22.795-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eighth-effect-484111-f5/global/firewalls/lz-allow-all-egress",
            "log_config": [],
            "name": "lz-allow-all-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/networks/lz-hub-vpc",
            "priority": 1000,
            "project": "eighth-effect-484111-f5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/firewalls/lz-allow-all-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.lz_hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-18T08:13:22.905-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eighth-effect-484111-f5/global/firewalls/lz-allow-ssh-internal",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "lz-allow-ssh-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/networks/lz-hub-vpc",
            "priority": 1000,
            "project": "eighth-effect-484111-f5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/firewalls/lz-allow-ssh-internal",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.lz_hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-01-18T08:13:22.966-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eighth-effect-484111-f5/global/firewalls/lz-deny-all-ingress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "lz-deny-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/networks/lz-hub-vpc",
            "priority": 65535,
            "project": "eighth-effect-484111-f5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/firewalls/lz-deny-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.lz_hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "lz_hub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/eighth-effect-484111-f5/global/networks/lz-hub-vpc",
            "mtu": 0,
            "name": "lz-hub-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1916573191204026468",
            "project": "eighth-effect-484111-f5",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/networks/lz-hub-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "lz_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-02T07:09:39.677-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/eighth-effect-484111-f5/regions/asia-south1/routers/lz-hub-router",
            "name": "lz-hub-router",
            "network": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/networks/lz-hub-vpc",
            "project": "eighth-effect-484111-f5",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/regions/asia-south1/routers/lz-hub-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.lz_hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "lz_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "eighth-effect-484111-f5/asia-south1/lz-hub-router/lz-hub-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "lz-hub-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "eighth-effect-484111-f5",
            "region": "asia-south1",
            "router": "lz-hub-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/regions/asia-south1/subnetworks/lz-private-subnet-a",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              },
              {
                "name": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/regions/asia-south1/subnetworks/lz-private-subnet-b",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.lz_hub_vpc",
            "module.networking.google_compute_router.lz_router",
            "module.networking.google_compute_subnetwork.lz_private_subnet_a",
            "module.networking.google_compute_subnetwork.lz_private_subnet_b"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "lz_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-18T08:13:25.319-08:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/eighth-effect-484111-f5/regions/asia-south1/subnetworks/lz-private-subnet-a",
            "ip_cidr_range": "10.10.1.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "lz-private-subnet-a",
            "network": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/networks/lz-hub-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eighth-effect-484111-f5",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/regions/asia-south1/subnetworks/lz-private-subnet-a",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.lz_hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "lz_private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-18T08:13:25.284-08:00",
            "gateway_address": "10.10.2.1",
            "id": "projects/eighth-effect-484111-f5/regions/asia-south1/subnetworks/lz-private-subnet-b",
            "ip_cidr_range": "10.10.2.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "lz-private-subnet-b",
            "network": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/global/networks/lz-hub-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eighth-effect-484111-f5",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-effect-484111-f5/regions/asia-south1/subnetworks/lz-private-subnet-b",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.lz_hub_vpc"
          ]
        }
      ]
    }
  ]
}